--- a/cpp00/ex00/Makefile
+++ b/cpp00/ex00/Makefile
@@ -1,13 +1,13 @@
-NAME	= megaphone
-SRCS	= megaphone.cpp
-OBJS	= $(SRCS:.cpp=.o)
-CC		= c++
-CFLAGS	= -Wall -Wextra -Werror -std=c++98
+NAME		= megaphone
+SRCS		= megaphone.cpp
+OBJS		= $(SRCS:.cpp=.o)
+CXX			= c++
+CXXFLAGS	= -Wall -Wextra -Werror -std=c++98
 
 all: $(NAME)
 
-$(NAME):
-	$(CC) $(CFLAGS) $(SRCS) -o $(NAME)
+$(NAME): $(OBJS)
+	$(CXX) $(CXXFLAGS) $(OBJS) -o $(NAME)
 
 clean:
 	rm -rf $(OBJS)
